syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

service ApplicantEducation{
    rpc GetApplicantEducation(ApplicantEducationId) returns(ApplicantEducationReply);
    rpc AddApplicantEducation(ApplicantEducationRequest) returns(google.protobuf.Empty);
    rpc UpdateApplicantEducation(ApplicantEducationRequest) returns(google.protobuf.Empty);
    rpc DeleteApplicantEducation(ApplicantEducationRequest) returns(google.protobuf.Empty);
}

message ApplicantEducationId
{
string Id=1;
}

message ApplicantEducationReply{
string Id=1;
string Applicant=2;
string Major=3;
string CertificateDiploma =4;
google.protobuf.Timestamp StartDate=5;
google.protobuf.Timestamp CompletionDate=6;
int32 CompletionPercent=7;
bytes TimeStamp=8;
}

message ApplicantEducationRequest{
string Id=1;
string Applicant=2;
string Major=3;
string CertificateDiploma =4;
google.protobuf.Timestamp StartDate=5;
google.protobuf.Timestamp CompletionDate=6;
int32 CompletionPercent=7;
}


message MultipleEducationRequests{
  repeated ApplicantEducationRequest Request=1;
}